--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,7 +106,7 @@ h1, h2, h3, h4, h5, h6 {
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
 
-#header.header-scrolled, #header.header-inner-pages {
+#header.header-scrolled, #header.header-inner-pages, #header.blog {
   background: rgba(40, 40, 40, 0.9);
 }
 
@@ -134,7 +134,6 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-/* Get Startet Button */
 .get-started-btn {
   margin-left: 25px;
   background: #f02737;
@@ -558,6 +557,24 @@ section {
 .section-bg {
   background-color: #8fffd6;
 }
+
+.section-blog{
+  width: 100%;
+  position: relative;
+  margin-top: 30px;
+}
+
+.section-course{
+  width: 100%;
+  position: relative;
+}
+
+.see-on a{
+  color: #fe2f2f;
+}
+
+
+
 
 .section-title {
   padding-bottom: 30px;
@@ -1003,3 +1020,8 @@ section {
 #footer .credits a:hover {
   color: #0d6efd;
 }
+
+/*--------------------------------------------------------------
+# Carousel
+--------------------------------------------------------------*/
+
